# sigscan-cli

./: .gitignore  cli.py  pyproject.toml
core/: engine.py
